[gd_scene load_steps=12 format=3 uid="uid://28ale2iku1n4"]

[ext_resource type="Script" uid="uid://fmrvmyx3dskq" path="res://scripts/game/game_play.gd" id="1_pem41"]
[ext_resource type="PackedScene" uid="uid://cjq41cf2jqg1h" path="res://scenes/ui/hud.tscn" id="2_51egx"]
[ext_resource type="Script" uid="uid://boe2tlkv8ivfw" path="res://scripts/core/game_board.gd" id="3_o1mqs"]
[ext_resource type="PackedScene" uid="uid://cpibgxbfm2p0r" path="res://scenes/ui/test_panel.tscn" id="4_mtjfu"]
[ext_resource type="Script" uid="uid://cbt4kf4pchvjg" path="res://scripts/core/board_animator.gd" id="5_nt2vj"]
[ext_resource type="Script" uid="uid://celas3tm78ajv" path="res://scripts/core/state_machine.gd" id="6_v0u15"]
[ext_resource type="Script" uid="uid://fbcjtexb0lou" path="res://scripts/core/ui_manager.gd" id="7_qqwta"]
[ext_resource type="PackedScene" uid="uid://bsourh8co1vbn" path="res://scenes/ui/pause_menu.tscn" id="8_55iw1"]
[ext_resource type="PackedScene" uid="uid://7ypwtymhkpm6" path="res://scenes/ui/game_over_menu.tscn" id="9_8kddu"]
[ext_resource type="Script" uid="uid://b0wqb277l6af8" path="res://scripts/core/game_history_manager.gd" id="10_4rk7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0.2827017, 0.2827017, 0.2827017, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pem41")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MainLayoutContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/MainLayoutContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HUD" parent="MarginContainer/MainLayoutContainer/LeftPanel" instance=ExtResource("2_51egx")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainLayoutContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UndoButton" type="Button" parent="MarginContainer/MainLayoutContainer/LeftPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "撤回 (Undo)"

[node name="SnapshotButton" type="Button" parent="MarginContainer/MainLayoutContainer/LeftPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "保存书签（存档）"

[node name="ReplayControlsContainer" type="VBoxContainer" parent="MarginContainer/MainLayoutContainer/LeftPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainLayoutContainer/LeftPanel/ReplayControlsContainer"]
layout_mode = 2
text = "回放控制"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainLayoutContainer/LeftPanel/ReplayControlsContainer"]
layout_mode = 2

[node name="ReplayPrevStepButton" type="Button" parent="MarginContainer/MainLayoutContainer/LeftPanel/ReplayControlsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< 上一步"

[node name="ReplayNextStepButton" type="Button" parent="MarginContainer/MainLayoutContainer/LeftPanel/ReplayControlsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "下一步 >"

[node name="ReplayBackButton" type="Button" parent="MarginContainer/MainLayoutContainer/LeftPanel/ReplayControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "返回列表"

[node name="GameBoard" type="Control" parent="MarginContainer/MainLayoutContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_o1mqs")

[node name="BoardBackground" type="Panel" parent="MarginContainer/MainLayoutContainer/GameBoard"]
unique_name_in_owner = true
layout_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0wfyh")

[node name="BoardContainer" type="Node2D" parent="MarginContainer/MainLayoutContainer/GameBoard"]
unique_name_in_owner = true

[node name="RightPanel" type="Control" parent="MarginContainer/MainLayoutContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TestPanel" parent="MarginContainer/MainLayoutContainer/RightPanel" instance=ExtResource("4_mtjfu")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_right = 0.0
offset_bottom = 190.0
grow_horizontal = 0

[node name="BoardAnimator" type="Node" parent="."]
script = ExtResource("5_nt2vj")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_v0u15")

[node name="HUDMessageTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="UIManager" type="Node" parent="."]
script = ExtResource("7_qqwta")
ui_scenes = {
0: ExtResource("8_55iw1"),
1: ExtResource("9_8kddu")
}

[node name="GameHistoryManager" type="Node" parent="."]
script = ExtResource("10_4rk7d")
